tests/errors/structs/008.ura
// errors/structs/008 — calling undefined method on struct
use "@/header"

struct Point:
    x int
    y int

main():
    p Point
    p.x = 1
    p.normalize()
